--- a/src/CSS/Newsletter.module.css
+++ b/src/CSS/Newsletter.module.css
@@ -36,7 +36,7 @@
   color: #BEBEBE;
   font-weight: 400;
 }
-form{
+.form{
   display: flex;
   flex-direction: column;
 }
@@ -54,7 +54,7 @@ form{
   font-style: normal;
 }
 
-label{
+.label{
   font-size: 1rem;
   font-weight: 600;
   margin-bottom: 0.8rem;
