--- a/src/CSS/Archive.module.css
+++ b/src/CSS/Archive.module.css
@@ -7,6 +7,7 @@
 .MonthList li{
   margin: 0rem 0.4rem 0rem 0rem;
   font-weight: 600;
+  cursor: pointer;
 }
 .MonthList li:first-child{
   font-weight:400;
