--- a/src/CSS/Carasoul.css
+++ b/src/CSS/Carasoul.css
@@ -112,14 +112,15 @@
   display: flex;
   justify-content: center;
   font-family: "Inter", sans-serif;
-  transition: transform 0.8ms cubic-bezier(0.42, 0, 0.58, 1), scale 0.8s cubic-bezier(0.42, 0, 0.58, 1), opacity 0.8s cubic-bezier(0.42, 0, 0.58, 1);
-
-   scale: 0.9;
-   opacity: 0.8;
+  scale: 0.9;
+  opacity: 0.8;
+  /* transition: transform 0.8ms cubic-bezier(0.42, 0, 0.58, 1), scale 0.8s cubic-bezier(0.42, 0, 0.58, 1), opacity 0.8s cubic-bezier(0.42, 0, 0.58, 1); */
+  transition: scale 0.25s ease-in-out;
 }
 .outerFrame.active{
   scale: 1;
   opacity: 1;
+  transition: scale 0.25s ease-in-out;
 }
 .potrait{
   border: 1px solid black;
