--- a/src/CSS/Carasoul.css
+++ b/src/CSS/Carasoul.css
@@ -114,8 +114,8 @@
   font-family: "Inter", sans-serif;
   scale: 0.9;
   opacity: 0.8;
-  /* transition: transform 0.8ms cubic-bezier(0.42, 0, 0.58, 1), scale 0.8s cubic-bezier(0.42, 0, 0.58, 1), opacity 0.8s cubic-bezier(0.42, 0, 0.58, 1); */
-  transition: scale 0.25s ease-in-out;
+  transition: transform 0.8ms cubic-bezier(0.42, 0, 0.58, 1), scale 0.8s cubic-bezier(0.42, 0, 0.58, 1), opacity 0.8s cubic-bezier(0.42, 0, 0.58, 1);
+  /* transition: scale 0.25s ease-in-out; */
 }
 .outerFrame.active{
   scale: 1;
