--- a/src/CSS/MagCluster.module.css
+++ b/src/CSS/MagCluster.module.css
@@ -1,14 +1,39 @@
 .All_magazine {
   width: 80%;
-  margin: 7.5rem 10rem 7.5rem 10rem;
+  margin: 2rem;
+
   height: fit-content;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   
 }
 
 .mag_head {
-  width: 100%;
+  width: 80%;
+  align-items: center;
   font-size: 1.5rem;
+}
+@media only screen and (min-width:425px){
+  .All_magazine{
+    
+    margin: 2.5rem;
+  }
+}
+@media only screen and (min-width:768px){
+  .All_magazine{
+    margin:0rem;
+    width: 100%;
+  }
+}
+@media only screen and (min-width:1440px){
+  .All_magazine{
+    width: 85%;
+  margin: 7.5rem 8rem 7.5rem 8rem;
+
+  }
+  .mag_head{
+    width: 100%;
+  }
 }
 
