--- a/src/CSS/NavBar.module.css
+++ b/src/CSS/NavBar.module.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-.Navbar{
+/* .Navbar{
   display: flex;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   color: white;
   border-radius: 2rem;
   justify-content: space-between;
@@ -39,4 +39,132 @@
 .options{
   margin: 1.3rem;
 
+} */
+.Navbar{
+  display: flex;
+  background-color: black;
+  border-radius: 2rem;
+  justify-content: space-between;
+  margin: 0.4rem;
+  align-items: center;
+
 }
+
+.options a{
+  text-decoration: none;
+  color: white;
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.5rem;
+  margin-right: 0.5rem;
+}
+.Navbar h2 a{
+  text-decoration: none;
+  color: white;
+  
+}
+.Navbar  h2{
+  font-size: 0.8rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.navButton{
+  border-radius: 2.5rem;
+  font-size: 0.5rem;
+  height: 2rem;
+  margin: 0.6rem;
+  font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+@media only screen and (min-width: 375px){
+.options a{
+  font-size: 0.6rem;
+}
+.Navbar h2{
+  font-size: 0.9rem;
+}
+}
+@media only screen and (min-width: 425px){
+  .options a{
+    font-size: 0.7rem;
+  }
+  .Navbar h2{
+    font-size: 1rem;
+  }
+  .navButton{
+    font-size: 0.6rem;
+  }
+  }
+  @media only screen and (min-width: 768px){
+    .Navbar{
+      margin: 1rem;
+    }
+    
+    .options a{
+      font-size: 0.8rem;
+      margin-left: 1rem;
+    }
+    .Navbar h2{
+      font-size: 1.2rem;
+      margin-left: 0.5rem;
+    }
+    .navButton{
+      font-size: 0.7rem;
+    }
+    }
+    @media only screen and (min-width: 1024px){
+      .options a{
+        font-size: 0.9rem;
+        margin-left: 1.5rem;
+      }
+      .Navbar h2{
+        font-size: 1.4rem;
+        margin-left: 0.7rem;
+      }
+      .navButton{
+        font-size: 0.8rem;
+      }
+      }
+      @media only screen and (min-width: 1440px){
+        .Navbar{
+          margin: 1.25rem;
+        }
+        .options a{
+          font-size: 1rem;
+          margin-left: 2.5rem;
+        }
+        .Navbar h2{
+          font-size: 1.5rem;
+          margin-left: 1.5rem;
+        }
+        .navButton{
+          font-size: 1rem;
+          height: 2.5rem;
+          padding: 0rem 1rem 0rem 1rem;
+        }
+        }
+        @media only screen and (min-width: 2560px){
+        .Navbar{
+          border-radius: 4rem;
+          padding: 0rem 1.5rem 0rem 0rem;
+          margin: 2rem;
+        }
+          .options a{
+            font-size: 2rem;
+            margin-left: 2.5rem;
+          }
+          .Navbar h2{
+            font-size: 3rem;
+            margin-left: 2rem;
+          }
+          .navButton{
+            font-size: 2rem;
+            height: 5.5rem;
+            padding: 0rem 1rem 0rem 1rem;
+          }
+          }
