--- a/src/CSS/Footer.module.css
+++ b/src/CSS/Footer.module.css
@@ -1,4 +1,4 @@
-.Footer{
+/* .Footer{
 background-color: black;
 color: white;
 font-family: "Inter", sans-serif;
@@ -35,5 +35,118 @@ margin: 0.8rem;
 .icons{
   display: flex;
   gap:0.5rem
+  
+} */
+.Footer{
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 2rem;
+}
+.Footer h1{
+  font-size: 1.5rem;
+  width: 100%;
+  text-align: center;
+}
+
+.list{
+  list-style-type: none;
+}
+.list li{
+  font-size: 0.6rem;
+  margin: 0.4rem;
+}
+.list li:first-child{
+  font-size: 0.8rem;
+  font-weight: 800;
+}
+
+@media only screen and (min-width:768px){
+  .Footer{
+    flex-wrap: nowrap;
+  }
+  .Footer h1{
+    width: auto;
+  }
+  .list li{
+    font-size: 0.8rem;
+    margin: 0.4rem;
+  }
+  .list li:first-child{
+    font-size: 1rem;
+    font-weight: 800;
+  }
+}
+@media only screen and (min-width:1024px){
+ 
+  
+  .list li{
+    font-size: 1rem;
+    margin: 0.6rem;
+  }
+  .list li:first-child{
+    font-size: 1.2rem;
+    margin-bottom: 0.8rem;
+  }
+}
+@media only screen and (min-width:1440px){
+ .Footer{
+  padding: 4rem 5rem 4rem 5rem;
+ }
+ .Footer h1{
+  margin-right: 4rem;
+ }
+ .list{
+  margin-right: 4rem;
+ }
+ .list li{
+  margin: 0.8rem 0 0.8rem 0rem;
+  /* width: 100%; */
+ }
+ 
+ .icons{
+  display: flex;
+ gap: 0.5rem;
+  
+}
+.icons svg{
+  font-size: 1.5rem;
+}
+.list li svg{
+  font-size: 1.5rem;
+}
+
+}
+@media only screen and (min-width:2560px){
+  .Footer{
+    padding: 7.5rem 10rem 7.5rem 10rem;
+   }
+   .Footer h1{
+    margin-right: 6rem;
+    font-size: 3rem;
+   }
+   .list{
+    margin-right: 6rem;
+   }
+   .list li{
+    margin: 1.5rem 0 1.5rem 0rem;
+    /* width: 100%; */
+    font-size: 2rem;
+   }
+   .list li:first-child{
+    font-size: 3rem;
+   }
+   
+   .icons{
+   gap: 1rem;
+    
+  }
+  .icons svg{
+    font-size: 2rem;
+  }
+  .list li svg{
+    font-size: 3.5rem;
+  }
   
 }
