--- a/src/CSS/Newsletter.module.css
+++ b/src/CSS/Newsletter.module.css
@@ -2,7 +2,7 @@
 .horizontal_line{
   width: 75%;
   margin-left: 2.5rem;
-  
+  margin-bottom: 3rem;
   height: .75rem; 
   border-bottom:2px solid black; 
   text-align: center;
@@ -118,6 +118,7 @@
   }
 }
 @media only screen and (min-width:1440px){
+  
   .Newsletter_image img{
     height: 25rem;
     width: 33rem;
@@ -132,6 +133,10 @@
   }
   .Subscribe_message{
     font-size: 1rem;
+  }
+  .horizontal_line{
+    margin-left: 14rem;
+    margin-bottom: 5rem;
   }
 }
 @media only screen and (min-width:2560px){
@@ -178,5 +183,6 @@
   }
   .horizontal_line{
     margin-left: 16rem;
+    margin-bottom: 10rem;
   }
 }
