--- a/src/CSS/ThreeCardFrame.module.css
+++ b/src/CSS/ThreeCardFrame.module.css
@@ -1,64 +1,147 @@
-.InfoCard_Container{
-display: flex;
-width: 100%;
-justify-content: space-evenly;
-border: 2px solid black;
-border-radius: 1.5rem;
-border-color: #c0c0c0;
-margin-bottom:1.5rem;
-
+.InfoCard_Container {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  border: 2px solid black;
+  border-radius: 1.5rem;
+  border-color: #c0c0c0;
+  margin-bottom: 1.5rem;
+  padding: 1.5rem;
 }
-.InfoCard_Container img{
-  width: 22.5rem;
-  height: 22.5rem;
+.InfoCard_Container img {
+  width: 12.5rem;
+  height: 12.5rem;
   border-radius: 0.25rem;
-  margin: 2rem;
 }
-.Card_Introduction{
-margin: 2rem 2rem 2rem 0rem;
-display: flex;
-flex-direction: column;
-}
-.Card_Introduction li{
+.Card_Introduction li {
   list-style-type: none;
 }
-.Card_Introduction h2{
-  margin:1rem 0rem 1rem 0rem;
-  font-size: 1.5rem;
+.Card_Introduction h2 {
+  font-size: 1rem;
 }
-.Card_Introduction p{
+.Card_Introduction p {
+  font-size: 0.8rem;
+}
+.Card_Tags {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   color: #808080;
-  width: 41.5rem;
-  height: 13rem;
-  font-size: 1.1rem;
+  font-size: 0.8rem;
+  margin-top: 1rem;
 }
-.Card_Tags{
-display: flex;
-justify-content: space-between;
-align-items: center;
-color: #808080;
-font-size: 18px;
-}
-.Tags{
-  width: 78px;
-  height: 35px;
+.Tags {
+  width: fit-content;
+  height: fit-content;
   align-content: center;
-  padding-left: 1.8rem;
+  padding: 0.6rem 1rem 0.6rem 1rem;
   background-color: blanchedalmond;
   color: black;
-  border-radius: 18px;
-}
-
-.buttonAlignment{
-  display: flex-end;
-  
- 
-}
-.buttonAlignment button{
-  width: 9.25rem;
-  height: 2.8rem;
   border-radius: 1rem;
-  background-color: black;
+}
+.buttonAlignment button {
   color: white;
+  background-color: black;
+  font-size: 0.8rem;
+  border-radius: 1rem;
+  padding: 0.6rem 1rem 0.6rem 1rem;
 }
 
+@media only screen and (min-width: 375px) {
+  .InfoCard_Container {
+    margin: 2rem;
+  }
+  .InfoCard_Container img {
+    width: 14rem;
+    height: 14rem;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .InfoCard_Container {
+    flex-direction: row;
+    align-items: center;
+    
+  }
+  .InfoCard_Container img {
+    width: 16rem;
+    height: 16rem;
+  }
+  .Card_Introduction {
+    margin-left: 1.5rem;
+  }
+  .Card_Introduction p{
+    /* width: 23.2rem; */
+    height: 7.9rem;
+  }
+  
+  .buttonAlignment{
+    display: flex;
+    justify-content: flex-end;
+    
+    height: max-content;
+    
+  
+  }
+  .Card_Tags {
+    margin-top: 0rem;
+  }
+
+}
+@media only screen and (min-width:1024px){ 
+ .InfoCard_Container img {
+    width: 20rem;
+    height: 20rem;
+  }
+  .Card_Introduction {
+    margin-left: 2rem;
+    height: 100%;
+  }
+  .Card_Introduction h2{
+    font-size: 1.5rem;
+  }
+  .Card_Introduction p{
+    font-size: 1rem;
+    height: 10rem;
+  }
+  .buttonAlignment button{
+    font-size: 1rem;
+  }
+  .Card_Tags{
+    font-size: 1rem;
+  }
+}
+@media only screen and (min-width:1440px){
+  .InfoCard_Container img {
+    width: 22.5rem;
+    height: 22.5rem;
+  }
+}
+@media only screen and (min-width:2560px){
+  .InfoCard_Container{
+    padding: 4rem;
+    border-radius: 2rem;
+  }
+  .InfoCard_Container img {
+    width: 30rem;
+    height: 30rem;
+  }
+  .Card_Introduction{
+    margin-left: 4rem;
+  }
+  .Card_Introduction h2{
+    font-size: 3rem;
+  }
+  .Card_Introduction p{
+    font-size: 1.5rem;
+    height: 14rem;
+  }
+  .Card_Tags{
+    font-size: 2rem;
+    font-weight: 600;
+  }
+  .buttonAlignment button{
+    font-size: 2rem;
+    border-radius: 3rem;
+    padding: 1.5rem 2rem 1.5rem 2rem;
+  }
+}
