--- a/src/CSS/Blog.module.css
+++ b/src/CSS/Blog.module.css
@@ -1,11 +1,12 @@
-.blog_container{
+/* .blog_container{
     margin: 4rem 10rem 4rem 10rem;
 }
 .InfoCard_Container{
     display: flex;
-    /* width: 100%; */
+    width: 100%;
     justify-content: space-evenly;
-    /* border: 2px solid black; */
+    border: 2px solid black;
+    flex-direction: column;
    
     
     
@@ -69,4 +70,180 @@
     .content{
         margin-left: 2rem;
         text-align: center;
+    } */
+
+  .blog_container{
+    margin: 2rem 5rem 2rem 5rem;
+    align-content: center;
+  }
+  .InfoCard_Container img{
+    height: 12rem;
+    width: 12rem;
+  }
+  
+  .Card_Introduction li{
+    list-style-type: none;
+    font-size: 0.8rem;
+    text-align: center;
+  }
+  .Card_Tags li:last-child{
+    margin-top: 1rem;
+    margin-left: 2rem;
+  }
+  .Card_Tags{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    color: #808080;
+    font-size: 0.8rem;
+    margin-top: 1rem;
+  }
+  .Card_Tags:last-child{
+    margin-left: 1rem;
+  }
+  .Tags{
+    width: fit-content;
+  height: fit-content;
+  align-content: center;
+  padding: 0.6rem 1rem 0.6rem 1rem;
+  background-color: blanchedalmond;
+  color: black;
+  border-radius: 1rem;
+  }
+  .Card_Introduction h2{
+    font-size: 1rem;
+    width: auto;
+  }
+  .buttonAlignment button{
+    width: fit-content;
+    height: fit-content;
+    border-radius: 1rem;
+    padding:0.6rem 1rem 0.6rem 1rem ;
+    background-color: black;
+    color: white;
+    
+  }
+  .buttonAlignment button:last-child{
+    background-color: #c9c9c9;
+    color: black;
+    border: 2px solid white;
+  }
+ 
+  .content{
+    font-size: 0.6rem;
+    text-align: left;
+  }
+  @media only screen and (min-width:375px){
+    .InfoCard_Container img{
+      height: 14rem;
+      width: 14rem;
     }
+  }
+  @media only screen and (min-width:425px){
+    .InfoCard_Container img{
+      height: 18rem;
+      width: 18rem;
+    }
+    .buttonAlignment{
+      display: flex;
+      justify-content: space-between;
+    }
+    .Card_Tags li:last-child{
+      margin-top: 1rem;
+      margin-left: 4rem;
+    }
+  }
+  @media only screen and (min-width:768px){
+    .InfoCard_Container{
+      display: flex;
+      flex-direction :row;
+      width: 100%;
+      
+    }
+    .Card_Introduction{
+      margin-left: 2rem;
+    }
+    .Card_Introduction h2{
+      font-size: 1.5rem;
+    }
+    .Card_Tags li:last-child{
+      margin-top: 0rem;
+      margin-left: 0rem;
+    }
+    
+    .content{
+      font-size: 0.8rem;
+    }
+     .Para1Container{
+      margin: 2rem 0rem 5rem 0rem;
+  }
+  .buttonAlignment{
+    margin-top: 2rem;
+  }
+  }
+  @media only screen and (min-width:1024px){
+    .InfoCard_Container img{
+      height: 20rem;
+      width: 20rem;
+    }
+    .Card_Introduction{
+      margin-left: 4rem;
+    }
+    .Card_Introduction h2{
+      font-size: 2rem;
+    }
+    .content{
+      font-size:1rem;
+    }
+    .buttonAlignment button{
+      font-size: 1rem;
+    }
+    .Card_Tags li{
+      font-size: 1rem;
+    }
+    .blog_container{
+      margin: 4rem 7.5rem 4rem 7.5rem;
+    }
+  }
+  @media only screen and (min-width:1440px){
+    .Card_Introduction h2{
+      font-size: 2.5rem;
+    }
+    .blog_container{
+      margin: 4rem 10rem 4rem 10rem;
+    }
+    .InfoCard_Container img{
+      height: 22.5rem;
+      width: 22.5rem;
+    }
+    .Para1Container{
+      margin: 4rem 0rem 7.5rem 0rem;
+  }
+  }
+  @media only screen and (min-width:2560px){
+    .Card_Introduction h2{
+      font-size: 4.5rem;
+    }
+    .blog_container{
+      margin: 8rem 20rem 8rem 20rem;
+    }
+    .InfoCard_Container img{
+      height: 32.5rem;
+      width: 32.5rem;
+    }
+    .Para1Container{
+      margin: 8rem 0rem 14.5rem 0rem;
+  }
+  .content{
+    font-size:2rem;
+  }
+  .buttonAlignment button{
+    font-size: 2rem;
+    padding: 1.2rem 2rem 1.2rem 2rem;
+    border-radius: 3rem;
+  }
+  .Card_Tags li{
+    font-size: 2rem;
+  }
+  }
