--- a/src/CSS/Comment.module.css
+++ b/src/CSS/Comment.module.css
@@ -1,18 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
+/* 
 .Subscribe_message{
   font-size: 1rem;
   background-color:white;
   padding: 0 20px;
 }
-.Newsletter_outerFrame{
-  display: flex;
-  justify-content:center;
-  gap: 12rem;
-  margin-top:7.5rem;
-  width: 100%;
-  margin-bottom:7.5rem;
-}
+
 .Subscribe_Section{
   display: flex;
   flex-direction: column;
@@ -31,56 +24,197 @@
 .form{
   display: flex;
   flex-direction: column;
-  width: 100%;
+  
 }
 
-.Subscribe_button{
-  border-radius: 2.5rem;
-  height: 2.5rem;
-  width:8rem;
-  margin: 0.5rem;
-  margin-top: 1rem;
-  
-  color: white;
-  background-color: black;
-  font-weight: 700;
-  font-style: normal;
+ */
+.Newsletter_outerFrame{
+  display: flex;
+  flex-direction: column-reverse;
+  margin: 2rem 3rem 2rem 3rem;
+}
+.Newsletter_image img{
+  height: 12rem;
+  width: 12rem;
+  margin-left: 2rem;
+  /* align-content: center; */
+  }
+  .Newsletter_image{
+    align-items: center;
+  }
+  .Subscribe_button{
+    border-radius: 2.5rem;
+    height:fit-content;
+    width:fit-content;
+    padding: 0.6rem 1rem 0.6rem 1rem;
+    margin: 0.5rem;
+    margin-top: 1rem;
+    color: white;
+    background-color: black;
+    font-weight: 700;
+    font-style: normal;
+  }
+  .textarea{
+    align-items: center;
+  border: 1px solid #bebebe;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 1rem 0rem 1rem 0rem;
+  height: 8rem;
+  width:  13rem;
+
+}
+.Subscribe_Section p{
+  color: #BEBEBE;
+  font-weight: 400;
 }
 
 .label{
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 600;
-  margin-bottom: 0.8rem;
 }
-
-
-
+.input_field {
+  border: none;
+  outline: none;
+  width: 10rem;
+}
 .input_container {
   display: flex;
   align-items: center;
   border: 1px solid #bebebe;
   border-radius: 0.5rem;
   padding: 0.5rem;
-  margin-bottom: 1.5rem;
+  margin: 0.8rem 0rem 1.5rem 0rem;
   
 }
-
 .icon {
   margin-right: 0.5rem;
   color: #bebebe;
 }
-
-.input_field {
-  border: none;
-  outline: none;
-  width: 21.5rem;
+@media only screen and (min-width:375px){
+  .textarea{
+    width: 16rem;
+  }
+  .Newsletter_image img{
+    height: 14rem;
+    width: 14rem;
+  }
 }
-.textarea{
-    align-items: center;
-  border: 1px solid #bebebe;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-  margin-bottom: 1.5rem;
-  height: 8rem;
+@media only screen and (min-width:425px){
+  .textarea{
+    width: 19.5rem;
+  }
+  .label{
+    font-size: 1rem;
+  }
+  .Newsletter_image img{
+    height: 16rem;
+    width: 16rem;
+  }
 
+}
+@media only screen and (min-width:768px){
+  .Newsletter_outerFrame{
+    flex-direction: row;
+    /* margin: 4rem 5rem 4rem  5rem; */
+    gap: 1rem;
+  }
+  .Newsletter_image{
+    align-content: center;
+  }
+  .Newsletter_image img{
+    height: 20rem;
+    width: 20rem;
+    margin-left: 0;
+
+  }
+  .textarea{
+    height: 10vh;
+  }
+  .input_container{
+    margin: 1rem 0rem 1rem 0rem;
+  }
+  
+}
+@media only screen and (min-width:1024px){
+  .Newsletter_outerFrame{
+    flex-direction: row;
+    margin: 4rem 7.5rem 4rem 7.5rem;
+    gap: 3rem;
+  }
+  .Newsletter_image{
+    align-content: center;
+  }
+  .Newsletter_image img{
+    height: 22.5rem;
+    width: 27.5rem;
+    margin-left: 0;
+
+  }
+  .textarea{
+    height: 10vh;
+  }
+  .input_container{
+    margin: 1rem 0rem 1rem 0rem;
+  }
+  .Subscribe_Section{
+    width: 45%;
+  }
+  
+}
+@media only screen and ( min-width:1440px){
+  .Newsletter_image img{
+    height: 27.5rem;
+    width: 34.5rem;
+
+  }
+  .textarea{
+    width: 100%;
+  }
+  .Newsletter_outerFrame{
+    margin: 4rem 10rem 4rem 10rem;
+    gap: 4rem;
+  }
+  .Subscribe_Section h2{
+    font-size: 2rem;
+  }
+}
+@media only screen and ( min-width:2560px){
+  .Newsletter_image img{
+    height: 55rem;
+    width: 64.5rem;
+
+  }
+  .label{
+    font-size: 2rem;
+  }
+  .Newsletter_outerFrame{
+    margin: 8rem 20rem 8rem 20rem;
+    gap: 4rem;
+  }
+  .Subscribe_Section h2{
+    font-size: 4rem;
+  }
+  .Subscribe_Section p{
+    font-size: 2rem;
+  }
+  .input_field{
+    font-size: 2rem;
+    padding: 2rem;
+  }
+  .input_container{
+    border-radius: 2rem;
+  }
+  .textarea{
+    font-size: 2rem;
+  }
+  .icon{
+    font-size: 2rem;
+    margin-left: 1rem;
+  }
+  .Subscribe_button {
+    font-size: 2rem;
+    padding: 1.2rem 2rem 1.2rem 2rem;
+
+  }
 }
