--- a/src/CSS/Carasoul.css
+++ b/src/CSS/Carasoul.css
@@ -81,10 +81,19 @@
     animation-duration: 2s;
   }
 }
+@keyframes scaleUpSmooth {
+  0% {
+    scale: 0.9;
+    opacity: 0.8;
+  }
+  100% {
+    scale: 1;
+    opacity: 1;
+  }
+}
 
 .outerFrame {
   border: 1px solid black;
-  /* width: 30%; */
   width: calc(var(--cardWidth) - var(--card-margin) * 1);
   flex-direction: column;
   height: 26rem;
@@ -96,16 +105,13 @@
   font-family: "Inter", sans-serif;
   scale: 0.9;
   opacity: 0.8;
-  transition: transform 0.8ms cubic-bezier(0.42, 0, 0.58, 1),
-    scale 0.8s cubic-bezier(0.42, 0, 0.58, 1),
-    opacity 0.8s cubic-bezier(0.42, 0, 0.58, 1);
-  /* transition: scale 0.25s ease-in-out; */
+  transition: transform 0.8ms cubic-bezier(0.42, 0, 0.58, 1);
 }
+
 .outerFrame.active {
-  scale: 1;
-  opacity: 1;
-  transition: scale 0.25s ease-in-out;
+  animation: scaleUpSmooth 0.25s ease-in-out forwards;
 }
+
 .potrait {
   border: 1px solid black;
   height: 8rem;
